adding alternative solutions to panda series

--- a/pandas_series.ipynb
+++ b/pandas_series.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,8 @@
     }
    ],
    "source": [
-    "fruits.unique()"
+    "fruits.unique()\n",
+    "#'nunique' returns the number of unique values"
    ]
   },
   {
@@ -150,7 +151,12 @@
     "#get the counts of all like fruit(groupme), \n",
     "#then get the largest count,\n",
     "#of the largest count '1', show all fruit\n",
-    "#fruits.mode()"
+    "\n",
+    "#fruits.mode()\n",
+    "\n",
+    "#fruits.value_counts().nlargest(1, keep='all').idmax()\n",
+    "#'.idmax()' returns the index \n",
+    "#or row label with the max value"
    ]
   },
   {
@@ -192,7 +198,11 @@
     "#out of the fruits series,\n",
     "#get the counts of all like fruit(groupme),\n",
     "#then get the smallest count,\n",
-    "#of the smallest count, show all fruit"
+    "#of the smallest count, show all fruit\n",
+    "\n",
+    "#fruits.value_counts().nsmallest(keep='all').index.to_list()\n",
+    "#'idmin()' only returns one of the occurences\n",
+    "#so had to change to list"
    ]
   },
   {
@@ -259,9 +269,9 @@
     }
    ],
    "source": [
-    "fruits[fruits.str.len()>5]\n",
+    "fruits[fruits.str.len() > 4]\n",
     "#of the fruits series,\n",
-    "#find the fruit whose length is longer than 5"
+    "#find the fruit whose length is longer than 4"
    ]
   },
   {
@@ -500,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -551,7 +563,10 @@
     "#for fruit in fruits series,\n",
     "#find the total count of 'aeiouy' in each fruit\n",
     "#'argmax()' returns the index that has the max number of vowels\n",
-    "#'fruits[]'' returns the fruit indexed"
+    "#'fruits[]'' returns the fruit indexed\n",
+    "\n",
+    "#fruits.str.count('[aeiouy]').idmax()\n",
+    "#if you only have 1 max"
    ]
   },
   {
@@ -563,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +650,10 @@
     "#we have to remove '$' and ','\n",
     "money = money.str.replace('$','')\n",
     "money = money.str.replace(',','')\n",
-    "money = money.astype(float)"
+    "money = money.astype(float)\n",
+    "\n",
+    "#money = money.str.replace('$','').str.replace(',','').astype(float)\n",
+    "#you can chain it all together with no limit to the amount of chains"
    ]
   },
   {
@@ -684,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +715,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +724,10 @@
     "#'pd.cut' cuts the 1st argument by \n",
     "#the amount in the second argument\n",
     "money_bin = pd.cut(money, 4)\n",
-    "money_bin.value_counts()"
+    "money_bin.value_counts()\n",
+    "\n",
+    "#money_bin.value_counts().sort_index()\n",
+    "#sorts from least to greatest"
    ]
   },
   {
@@ -718,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +995,11 @@
     "string = (\"hnvidduckkqxwymbimkccexbkmqygkxoyndmcxnwqarhyffsjpsrabtjzsypmzadfavyrnndndvswreauxovncxtwzpwejilzjrmmbbgbyxvjtewqthafnbkqplarokkyydtubbmnexoypulzwfhqvckdpqtpoppzqrmcvhhpwgjwupgzhiofohawytlsiyecuproguy\")\n",
     "#have to turn the whole string into a list of characters\n",
     "#before we turn the string into a series\n",
-    "string = pd.Series(list(string))"
+    "string = pd.Series(list(string))\n",
+    "\n",
+    "#string.replace('',' ').strip().split(' ')\n",
+    "#this will cut and clean the original string\n",
+    "#place this equation into pd.Series()"
    ]
   },
   {
@@ -1117,11 +1142,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruits = ['mango', 'kiwi', 'strawberry', 'guava', 'pineapple', 'mandarin orange']\n",
+    "fruit = ['mango', 'kiwi', 'strawberry', 'guava', 'pineapple', 'mandarin orange']\n",
     "\n",
     "numbers = [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 17, 19, 23, 256, -8, -4, -2, 5, -9]\n",
     "\n",
-    "fruits = pd.Series(fruits)\n",
+    "fruits = pd.Series(fruit)\n",
     "numbers = pd.Series(numbers)"
    ]
   },
@@ -1155,7 +1180,10 @@
     }
    ],
    "source": [
-    "uppercased_fruits = fruits.str.upper()"
+    "uppercased_fruits = fruits.str.upper()\n",
+    "#when using string functions on series,\n",
+    "#you must put '.str' in between the \n",
+    "#series and the function."
    ]
   },
   {
@@ -1569,7 +1597,9 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
