comments added to half the problems

--- a/seaborn_exercises.ipynb
+++ b/seaborn_exercises.ipynb
@@ -1442,7 +1442,9 @@
     }
    ],
    "source": [
+    "#using seaborn to create a distribution plot\n",
     "sns.distplot(iris.petal_length)\n",
+    "#plot show deletes the background syntax\n",
     "plt.show()"
    ]
   },
@@ -1472,6 +1474,7 @@
     }
    ],
    "source": [
+    "#this is the relative plot from the seaborn database\n",
     "sns.relplot(x = 'petal_width', y = 'petal_length', data = iris)\n",
     "plt.show()\n",
     "#there is a positive correlation between petal length and petal width"
@@ -1847,6 +1850,7 @@
     }
    ],
    "source": [
+    "# in order to find out which database to load the dataset from then you have to look at the spec sheet. there will be another problem that loads from the saem place\n",
     "insect_sprays = data('InsectSprays')\n",
     "data('InsectSprays', show_doc=True)"
    ]
